<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_btn_room">Room</string>
    <string name="add_note_button">Добавить</string>
    <string name="title">Заметки</string>
    <string name="start_btn_firebase">Firebase</string>
    <string name="start_hint_email">email</string>
    <string name="start_hint_password">password</string>
    <string name="start_btn_login">login</string>
</resources>