<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.StartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/start_label"
        android:textSize="@dimen/app_large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_room"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/start_btn_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/start_btn_firebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_room" />

    <EditText
        android:id="@+id/start_email"
        android:visibility="invisible"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:inputType="textEmailAddress"
        android:hint="@string/start_hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_firebase"
        android:autofillHints="" />

    <EditText
        android:id="@+id/start_password"
        android:visibility="invisible"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/start_hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_email"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_login"
        android:visibility="invisible"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/start_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_password" />

</androidx.constraintlayout.widget.ConstraintLayout>